--- a/Python/Django/week-4/Module-13/templates/base.html
+++ b/Python/Django/week-4/Module-13/templates/base.html
@@ -45,6 +45,11 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'django_form' %}">Django Form</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'student_form' %}"
+                >Student Form</a
+              >
+            </li>
           </ul>
           <form class="d-flex" role="search">
             <input
