--- a/Python/Django/week-4/kyc/templates/base.html
+++ b/Python/Django/week-4/kyc/templates/base.html
@@ -1,3 +1,4 @@
+{% load static tailwind_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -6,10 +7,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
+    {% tailwind_css %}
 </head>
 
 <body>
-<nav class=""></nav>
+    <nav class=""></nav>
     {% block content %}
 
     {% endblock content %}
