--- a/Python/Django/week-4/asru/posts/templates/add_post.html
+++ b/Python/Django/week-4/asru/posts/templates/add_post.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h1>Add Profile Page</h1>
+<h1>Add Post Page</h1>
 
 <form action="" method="POST">
     {% csrf_token %}
