--- a/Python/Django/week-4/asru/templates/base.html
+++ b/Python/Django/week-4/asru/templates/base.html
@@ -20,13 +20,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Add Author</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'add_author' %}">Add Author</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Add Post</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'add_post' %}">Add Post</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Add Category</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'add_category' %}">Add Category</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
