--- a/Python/Django/week-4/demo/author/templates/author.html
+++ b/Python/Django/week-4/demo/author/templates/author.html
@@ -1,19 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
 
-<body>
-    <h1>Author page</h1>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{form}}
-        <button typ="submit">Submit</button>
-    </form>
-</body>
-
-</html>
+{% block content %}
+<h1>Author page</h1>
+<form action="" method="POST">
+    {% csrf_token %}
+    {{form}}
+    <button typ="submit">Submit</button>
+</form>
+{% endblock content %}
