--- a/Python/Django/week-5/authentication_authorization/first_app/templates/home.html
+++ b/Python/Django/week-5/authentication_authorization/first_app/templates/home.html
@@ -1,40 +1,7 @@
-{% load crispy_forms_tags %}
-
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-
-<body class="w-75 mx-auto">
-
-     {% if messages %}
-     {% for m in messages %}
-     <small {% if m.tags %} class="{{m.tags}}" {% endif %}>{{m}}</small>
-     {% endfor %}
-     {% endif %}
+{% extends 'base.html' %}
 
 
-    <h1>Hello, world!</h1>
-    <form method="post" style="width: 50%; margin: auto" novalidate>
-        <h1>Signup Page</h1>
-        {% csrf_token %}
-        <!-- {{form | crispy }} -->
-        {% for fm in form%} {{fm.label_tag}} {{fm}} {{fm.errors|striptags}}
-        {% endfor %}
-        <br />
-        <button class="btn btn-primary" type="submit">Submit</button>
-        <br />
-    </form>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
-</body>
-
-</html>
+{% block body %}
+    Homepage
+{% endblock body %}
+    
