--- a/Python/Django/week-5/authentication_authorization/first_app/templates/base.html
+++ b/Python/Django/week-5/authentication_authorization/first_app/templates/base.html
@@ -16,7 +16,7 @@
             <a href="{% url 'home' %}" class="navbar-brand text-white">Navbar</a>
             <div class="d-flex gap-2" role="search">
                 <a href="{% url 'signup' %}" class="btn btn-outline-success text-white">SignUp</a>
-                <button class="btn btn-outline-warning text-white">LogIn</button>
+                <a <a href="{% url 'login' %}" class="btn btn-outline-warning text-white">LogIn</a>
             </div>
         </div>
     </nav>
