--- a/Python/Django/week-5/authentication_authorization/first_app/templates/base.html
+++ b/Python/Django/week-5/authentication_authorization/first_app/templates/base.html
@@ -15,8 +15,18 @@
         <div class="container-fluid">
             <a href="{% url 'home' %}" class="navbar-brand text-white">Navbar</a>
             <div class="d-flex gap-2" role="search">
-                <a href="{% url 'signup' %}" class="btn btn-outline-success text-white">SignUp</a>
-                <a <a href="{% url 'login' %}" class="btn btn-outline-warning text-white">LogIn</a>
+                {% comment %} <a href="{% url 'signup' %}" class="btn btn-outline-success text-white">SignUp</a>
+                {% endcomment %}
+                {% comment %} <a href="{% url 'login' %}" class="btn btn-outline-warning text-white">LogIn</>
+                    {% endcomment %}
+
+                    {% if user.is_authenticated %}
+                    <a href="{% url 'profile' %}" class="btn btn-outline-warning text-white">Profile</a>
+                    <a href="{% url 'logout' %}" class="btn btn-outline-success text-white">logOut</a>
+                    {% else %}
+                    <a href="{% url 'signup' %}" class="btn btn-outline-success text-white">SignUp</a>
+                    <a href="{% url 'login' %}" class="btn btn-outline-warning text-white">LogIn</a>
+                    {% endif %}
             </div>
         </div>
     </nav>
