--- a/Python/Django/week-5/authentication_authorization/first_app/templates/profile.html
+++ b/Python/Django/week-5/authentication_authorization/first_app/templates/profile.html
@@ -1,7 +1,27 @@
 {% extends 'base.html' %}
-
-
+{% load crispy_forms_tags %}
 
 {% block body %}
-    Welcome to profile page.
+Welcome to profile page.
+<p>Hello {{user}}</p>
+
+<p><a href="{% url 'passchange' %}">Change Your Password</a></p>
+<p><a href="{% url 'passchange2' %}">Change Your Password without old password</a></p>
+
+<form method="post" style="width: 50%; margin: auto" novalidate>
+    <h1 class="text-center my-3">Profile Page</h1>
+    {% csrf_token %}
+    {% if form.non_field_errors %}
+    {% for er in form.non_field_errors %}
+    <p class="bg-danger text-white p-3">{{er}}</p>
+    {% endfor %}
+    {% endif %}
+    <!-- {{form | crispy }} -->
+    {% for fm in form%} {{fm.label_tag}} {{fm}} {{fm.errors|striptags}}
+    {% endfor %}
+    <br />
+    <button class="btn btn-warning" type="submit">Change Data</button>
+    <br />
+</form>
+
 {% endblock body %}
