--- a/Python/Django/week-5/authentication_authorization/first_app/templates/signup.html
+++ b/Python/Django/week-5/authentication_authorization/first_app/templates/signup.html
@@ -19,5 +19,6 @@
         <br />
         <button class="btn btn-primary" type="submit">Submit</button>
         <br />
+        <small>Already have an account <a href="{% url 'login' %}">login</a></small>
     </form>
 {% endblock body %}
