Login register form done

--- a/Python/Django/week-5/asru_part_2/templates/base.html
+++ b/Python/Django/week-5/asru_part_2/templates/base.html
@@ -20,19 +20,24 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'add_author' %}">Add Author</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'add_post' %}">Add Post</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'add_category' %}">Add Category</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                <div class="d-flex" role="search">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link btn btn-warning text-dark" aria-current="page"
+                                href="{% url 'register' %}">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link btn btn-primary text-dark" aria-current="page"
+                                href="{% url 'user_login' %}">Login</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
