--- a/Python/Django/week-5/asru_part_2/templates/base.html
+++ b/Python/Django/week-5/asru_part_2/templates/base.html
@@ -13,21 +13,31 @@
 <body class="w-75 mx-auto">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
+
+                    {% if request.user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'add_post' %}">Add Post</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'add_category' %}">Add Category</a>
-                    </li>
+                    {% endif %}
                 </ul>
                 <div class="d-flex" role="search">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+
+                        {% if request.user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link btn btn-warning text-dark" aria-current="page" href="#">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link btn btn-primary text-dark" aria-current="page"
+                                href="{% url 'logout' %}">Log out</a>
+                        </li>
+                        {% else %}
                         <li class="nav-item">
                             <a class="nav-link btn btn-warning text-dark" aria-current="page"
                                 href="{% url 'register' %}">Register</a>
@@ -36,11 +46,18 @@
                             <a class="nav-link btn btn-primary text-dark" aria-current="page"
                                 href="{% url 'user_login' %}">Login</a>
                         </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
         </div>
     </nav>
+
+    {% for i in messages %}
+    <div class="">
+        <h3 class="text-{{i.tags}}">{{i}}</h3>
+    </div>
+    {% endfor %}
 
     <div class="my-3">
         {% block content %}
