--- a/Python/Django/week-5/asru_part_2/templates/base.html
+++ b/Python/Django/week-5/asru_part_2/templates/base.html
@@ -31,7 +31,8 @@
 
                         {% if request.user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link btn btn-warning text-dark" aria-current="page" href="#">Profile</a>
+                            <a class="nav-link btn btn-warning text-dark" aria-current="page"
+                                href="{% url 'profile' %}">Profile</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link btn btn-primary text-dark" aria-current="page"
