--- a/Python/Django/week-5/asru_part_2/author/templates/profile.html
+++ b/Python/Django/week-5/asru_part_2/author/templates/profile.html
@@ -2,12 +2,32 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h1 class="text-center my-3">Profile Page</h1>
-<a class="btn btn-warning mb-2" href="{% url 'pass_change' %}">Change Password</a>
+<a class="btn btn-warning my-2" href="{% url 'edit_profile' %}">Edit Profile</a>
 
-<form method="POST" style="width: 50%; margin:auto">
-    {% csrf_token %}
-    {{form|crispy}}
-    <button class="btn btn-warning mb-5 w-100" type="submit">Submit</button>
-</form>
+<div class="row mt-5">
+
+    {% for post in data %}
+    <div class="col-sm-4 mb-4">
+        <div class="card">
+            <div class="card-body">
+                {% comment %} <p>Author: {{post.author}}</p> {% endcomment %}
+                <p>Author: {{post.author.first_name}}</p>
+                <h5 class="card-title text-primary">{{post.title}}</h5>
+                <p class="card-text">{{post.content}}</p>
+
+                {% for cat in post.category.all %}
+                <button class="btn btn-warning m-1 btn-sm">{{cat.name}}</button>
+                {% endfor %}
+
+                <div class="mt-4">
+                    <a href="{% url 'edit_post' post.id %}" class="btn btn-primary">Edit</a>
+                    <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+
+</div>
+
 {% endblock content %}
