addpost deletepost updatepost done using class based view

--- a/Python/Django/week-5/asru_part_3/posts/templates/delete.html
+++ b/Python/Django/week-5/asru_part_3/posts/templates/delete.html
@@ -6,8 +6,8 @@
 
 <form action="" method="POST">
     {% csrf_token %}
+    <p>Are you sure you want to delete "{{ object }}"?</p>
     {{form|crispy}}
-    
-    <button class="btn btn-warning" type="submit">Submit</button>
+    <button class="btn btn-warning" type="submit">Delete</button>
 </form>
 {% endblock content %}
