--- a/Python/Django/week-5/asru_part_3/templates/base.html
+++ b/Python/Django/week-5/asru_part_3/templates/base.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body class="w-100 mx-auto">
+<body class="w-100 px-4">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
