--- a/Python/Django/week-6/Own_Bank/accounts/templates/accounts/user_registration.html
+++ b/Python/Django/week-6/Own_Bank/accounts/templates/accounts/user_registration.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com" rel="stylesheet"></script>
     <title>Document</title>
 </head>
 
@@ -13,8 +14,8 @@
         <p class="font-bold">Error!</p>
         <p class="block sm:inline">{{ error }}</p>
     </div>
-    {% endfor %} {% endif %}  {% endcomment %}
-    
+    {% endfor %} {% endif %} {% endcomment %}
+
     {% if form.non_field_errors %} {% for error in form.non_field_errors %}
     <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-2" role="alert">
         <p class="font-bold">Error!</p>
