design core app

--- a/Python/Django/week-6/Bank-Management/core/templates/navbar.html
+++ b/Python/Django/week-6/Bank-Management/core/templates/navbar.html
@@ -46,8 +46,8 @@
         {% else %}
         <div class="text-md lg:flex-grow"></div>
         <div>
-            <a href="{% url 'login' %}"
-                class="mr-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-gray-800 hover:bg-red-700 mt-4 lg:mt-0">Login</a>
+            {% comment %} <a href="{% url 'login' %}"
+                class="mr-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-gray-800 hover:bg-red-700 mt-4 lg:mt-0">Login</a> {% endcomment %}
         </div>
         <div>
             <a href="{% url 'register' %}"
