--- a/Python/Django/week-6/Bank-Management/accounts/templates/accounts/user_registration.html
+++ b/Python/Django/week-6/Bank-Management/accounts/templates/accounts/user_registration.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com" rel="stylesheet"></script>
-    <title>Document</title>
-</head>
+{% block body %}
 
-<body>
     {% if form.non_field_errors %} 
         {% for error in form.non_field_errors %}
         <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-2" role="alert">
@@ -173,6 +166,6 @@
             </form>
         </div>
     </div>
-</body>
 
-</html>
+{% endblock body %}
+    
