--- a/Python/Django/week-6/Bank-Management/core/templates/base.html
+++ b/Python/Django/week-6/Bank-Management/core/templates/base.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dummy Banking System" />
     <script src="https://cdn.tailwindcss.com" rel="stylesheet"></script>
-    {% block title %} {% endblock title %}
+    <title>
+        {% block head_title %}Banking System{% endblock %}
+    </title>
 
 </head>
 
-<body>
-
+<body class="bg-indigo-400">
+    {% include 'navbar.html' %}
     <div>
         {% block body %}
         <!-- Code will execute here -->
