--- a/Python/Django/week-6/Bank-Management/core/templates/navbar.html
+++ b/Python/Django/week-6/Bank-Management/core/templates/navbar.html
@@ -15,7 +15,7 @@
     <!-- Report , Withdraw, Deposit       Profile Logout logged in user -->
     <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto px-10">
         {% if request.user.is_authenticated %}
-        <div class="text-md lg:flex-grow">
+        {% comment %} <div class="text-md lg:flex-grow">
             <a href="{% url 'transaction_report' %}"
                 class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-red-900 hover:font-black mr-4">
                 Report
@@ -32,22 +32,22 @@
                 class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-red-900 hover:font-black mr-4">
                 Loan Request
             </a>
-        </div>
+        </div> {% endcomment %}
         <div class="flex w-auto">
             <div class="text-blue-900 my-auto font-black px-5">
-            Welcome, {{ request.user.first_name }} (balance : {{request.user.account.balance}}) 
+                Welcome, {{ request.user.first_name }} (balance : {{request.user.account.balance}})
             </div>
 
-            <a href="{% url 'profile' %}"
-                class="mx-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-dark hover:bg-red-700 mt-4 lg:mt-0">Profile</a>
+            {% comment %} <a href="{% url 'profile' %}"
+                class="mx-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-dark hover:bg-red-700 mt-4 lg:mt-0">Profile</a> {% endcomment %}
             <a href="{% url 'logout' %}"
                 class="mx-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-dark hover:bg-red-700 mt-4 lg:mt-0">Logout</a>
         </div>
         {% else %}
         <div class="text-md lg:flex-grow"></div>
         <div>
-            {% comment %} <a href="{% url 'login' %}"
-                class="mr-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-gray-800 hover:bg-red-700 mt-4 lg:mt-0">Login</a> {% endcomment %}
+            <a href="{% url 'login' %}"
+                class="mr-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-gray-800 hover:bg-red-700 mt-4 lg:mt-0">Login</a>
         </div>
         <div>
             <a href="{% url 'register' %}"
